[package]
name = "benihora-vst"
version = "0.1.0"
edition = "2021"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/carrotflakes/benihora"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "eb968ba44666d96cb2349ad877fcdcbccb993f8c", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "eb968ba44666d96cb2349ad877fcdcbccb993f8c" }
serde = "1.0"

benihora-vst-ui = { path = "../benihora-vst-ui" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
