[package]
name = "benihora"
version = "0.1.0"
edition = "2021"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/carrotflakes/benihora"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad = "0.4"
